Creada vista add con modales.

--- a/src/main/resources/templates/holamundo.html
+++ b/src/main/resources/templates/holamundo.html
@@ -20,6 +20,7 @@ and open the template in the editor.
         <div>Hola MUNDO <span th:text="${direccion}"></div>
         <div>Hola MUNDO <span th:text="${telefono}"></div>
         <div>Hola MUNDO <span th:text="${sucursal}"></div>
-        
+        <div>Hola MUNDO <span th:text="${id}"></div>
+
     </body>
 </html>
