--- a/src/main/resources/templates/template/main_template.html
+++ b/src/main/resources/templates/template/main_template.html
@@ -16,7 +16,7 @@
     <header th:fragment="general_header_admin">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container-fluid">
-			<a class="navbar-brand"> Bienvenido Sr. <span th:text="${usuario.nombre}"</span> </a>
+                    <a class="navbar-brand"> Bienvenido Sr. <span th:text="${usuario.nombre}"></span> </a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 				aria-label="Toggle navigation">
@@ -42,7 +42,7 @@
     <header th:fragment="general_header_cliente">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container-fluid">
-			<a class="navbar-brand"> Bienvenido Sr. <span th:text="${nombre}"</span> </a>
+                    <a class="navbar-brand"> Bienvenido Sr. <span th:text="${usuario.nombre}"></span> </a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 				aria-label="Toggle navigation">
@@ -69,7 +69,7 @@
     <header th:fragment="general_header_vendedor">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container-fluid">
-			<a class="navbar-brand"> Bienvenido Sr. <span th:text="${usuario.nombre}"</span> </a>
+                    <a class="navbar-brand"> Bienvenido Sr. <span th:text="${usuario.nombre}"></span> </a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
 				aria-label="Toggle navigation">
