--- a/src/main/resources/templates/vista_administrador.html
+++ b/src/main/resources/templates/vista_administrador.html
@@ -39,7 +39,7 @@ and open the template in the editor.
             <tbody>
             <c:forEach var="usuario" items="${datos_usuarios}">
                 <tr th:each="usuario : ${datos_usuarios}">
-                    <td th:text="${usuario.id}"></td>
+                    <td id="userId" th:text="${usuario.id}"></td>
                     <td th:text="${usuario.user}"></td>
                     <td th:text="${usuario.pass}"></td>
                     <td th:text="${usuario.rol}"></td>
@@ -48,7 +48,10 @@ and open the template in the editor.
                     <td th:text="${usuario.direccion}"></td>
                     <td th:text="${usuario.telefono}"></td>
                     <td th:text="${usuario.sucursal}"></td>
-                    <td><a href="@{usuarios/edit/{id}(id=${usuario.id})" class="btn btn-sm btn-warning">Editar</a></td>
+                    <td><button type="button" class="btn btn-sm btn-warning" data-bs-toggle="modal" data-bs-target="#EditUser" onclick="editUser()">
+       Editar
+    </button>
+                        <a href="@{usuarios/edit/{id}(id=${usuario.id})" class="btn btn-sm btn-warning">Editar</a></td>
                     <td><a href="@{usuarios/delete/{id}(id=${usuario.id})" class="btn btn-sm btn-danger">Eliminar</a></td>
                 </tr>
                 </tbody>
@@ -120,13 +123,9 @@ and open the template in the editor.
         </div>
     </div>
 
-    <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-        Launch demo modal
-    </button>
-
+    
     <!-- Modal Editar -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="EditUser" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -134,7 +133,7 @@ and open the template in the editor.
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    ...
+                    <div th:replace="template/admin_forms_template::usuarios_edit"></div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -169,5 +168,16 @@ and open the template in the editor.
     </div>
 
     <footer th:replace="template/main_template::general_footer"></footer>
+    <script type="text/javascript">
+        function editUser(){
+            let url = '/admin/usuarios/edit/';
+            
+            if($('#userId').val() !== ''){
+                url = url + $('#userId').val();
+            }
+            
+           $('#EditUser').load(url);
+        }
+    </script>
 </body>
 </html>
