--- a/src/main/resources/templates/template/admin_forms_template.html
+++ b/src/main/resources/templates/template/admin_forms_template.html
@@ -148,7 +148,143 @@
             </div>
         </div>
 
+        <!-- Fragments para Vehiculos -->
 
+        <div th:fragment="vehiculos_add">
+            <div class="container">
+                <h1>Agregar Vehiculo</h1>
+                <form method="post" th:action="@{/admin/vehiculos/add}">
+      
+                    <div class="mb-3">
+                    <label>Marca: </label>
+                    <input type="text" name="marca" required="true"/>
+                    </div>
+                    <div class="mb-3">
+                    <label>Modelo: </label>
+                    <input type="text" name="modelo" required="true"/>
+                    </div>
+                    <div class="mb-3">
+                    <label>Patente: </label>
+                    <input type="text" name="patente" required="true"/>
+                    </div>
+                    <div class="mb-3">
+                    <label>Color: </label>
+                    <input type="text" name="color" required="true"/>
+                    </div>
+                    <div class="mb-3">
+                    <label>Precio Alquiler: </label>
+                    <input type="text" name="precio_alquiler" required="true"/>
+                    </div>
+                    <div class="mb-3">
+                    <label>Litros en Tanque: </label>
+                    <input type="text" name="litros_combustible" required="true"/>
+                    </div>
+                    <div class="mb-3">
+                    <label>Entregado: </label>
+                    <input type="text" name="entregado" required="true"/>
+                    </div>
+                    
+                    <input type="hidden" name="id" th:value="${usuario.id}">
+                    <div class="mb-4">
+                        <button type="button" class="btn btn-secondary" >Cerrar</button>
+                        <input type="submit" class="btn btn-primary" value="Agregar Vehiculo">
+
+                    </div>
+                </form>
+                <br>
+            </div>
+        </div>
+
+        <div th:fragment="vehiculos_edit">
+            <div class="container">
+                <h1>Editar Vehiculo</h1>
+                <form method="post" th:action="@{/admin/vehiculos/edit/{id}(id=${vehiculo.id})}" th:object="${vehiculo}">
+                     <div class="mb-3">
+                    <label>Marca: </label>
+                    <input type="text" name="marca" required="true" th:field="*{marca}" th:value="${vehiculo.marca}"/>
+                    </div>
+                    <div class="mb-3">
+                    <label>Modelo: </label>
+                    <input type="text" name="modelo" required="true" th:field="*{modelo}" th:value="${vehiculo.modelo}"/>
+                    </div>
+                    <div class="mb-3">
+                    <label>Patente: </label>
+                    <input type="text" name="patente" required="true" th:field="*{patente}" th:value="${vehiculo.patente}"/>
+                    </div>
+                    <div class="mb-3">
+                    <label>Color: </label>
+                    <input type="text" name="color" required="true" th:field="*{color}" th:value="${vehiculo.color}"/>
+                    </div>
+                    <div class="mb-3">
+                    <label>Precio Alquiler: </label>
+                    <input type="text" name="precio_alquiler" required="true" th:field="*{precio_alquiler}" th:value="${vehiculo.precio_alquiler}"/>
+                    </div>
+                    <div class="mb-3">
+                    <label>Litros en Tanque: </label>
+                    <input type="text" name="litros_combustible" required="true" th:field="*{litros_combustible}" th:value="${vehiculo.litros_combustible}"/>
+                    </div>
+                    <div class="mb-3">
+                    <label>Entregado: </label>
+                    <input type="text" name="entregado" required="true" th:field="*{entregado}" th:value="${vehiculo.entregado}"/>
+                    </div>
+                    <input type="hidden" name="user_id" th:value="${id}">
+                    <div class="mb-4">
+
+                    
+                        <button type="button" href="" class="btn btn-secondary">Volver Atras</button>
+                        <button type="submit" class="btn btn-primary">Actualizar Vehiculo</button>
+
+                    </div>
+                </form>
+                <br>
+            </div>
+        </div>
+        
+        <div th:fragment="vehiculos_delete">
+            <div class="container">
+                <h1>Eliminar Vehiculo</h1>
+                <form method="post" th:action="@{/admin/vehiculos/delete/{id}(id=${vehiculo_delete.id})}" th:object="${vehiculo_delete}">
+                    <div class="mb-3">
+                     <div class="mb-3">
+                    <label>Marca: <span th:text="${vehiculo_delete.marca}"</span></label>
+
+                    </div>
+                    <div class="mb-3">
+                    <label>Modelo: <span th:text="${vehiculo_delete.modelo}"</span></label>
+        
+                    </div>
+                    <div class="mb-3">
+                    <label>Patente: <span th:text="${vehiculo_delete.patente}"</span></label>
+             
+                    </div>
+                    <div class="mb-3">
+                    <label>Color: <span th:text="${vehiculo_delete.color}"</span></label>
+          
+                    </div>
+                    <div class="mb-3">
+                    <label>Precio Alquiler: <span th:text="${vehiculo_delete.precio_alquiler}"</span></label>
+           
+                    </div>
+                    <div class="mb-3">
+                    <label>Litros en Tanque: <span th:text="${vehiculo_delete.litros_combustible}"</span></label>
+         
+                    </div>
+                    <div class="mb-3">
+                    <label>Entregado: <span th:text="${vehiculo_delete.entregado}"</span></label>
+                   
+                    </div>
+                    <input type="hidden" name="user_id" th:value="${id}">
+                    <div class="mb-4">
+
+                    
+                        <button type="button" class="btn btn-secondary">Cerrar</button>
+                        <button type="submit" class="btn btn-primary">Eliminar Vehiculo</button>
+
+                    </div>
+                </form>
+                <br>
+            </div>
+        </div>
 
     </body>
 </html>
